# PRINTMAXX_STARTER_KIT

./: .gitignore  AUTO_STATUS_LIVE.txt  CAPITAL_GENESIS_EXECUTION_SUMMARY.md  CLAUDE_CODE_HANDOFF.md  CLAUDE_CODE_SETUP.md  CODEX.md  DAY1_EXECUTION.md  DISPATCH_HANDOFF_APR24.md  DISPATCH_STATUS.md  FOLDER_REORGANIZATION_PLAN.md  HANDOFF_NEXT_CHAT.md  INFRA_AUDIT.md  MOBILE_CONTROL_PLAYBOOK.md  Makefile  NEW_APP_FACTORY_ALPHA_FEB_2026.csv  NEW_METHODS_SUMMARY_2026-01-24.md  NICHE_CONTENT_RESEARCH_2025_2026.md  PARSED_COMPACT.txt  PARSED_OUTPUT.txt  PRINTMAXX_AUTOMATION_BLUEPRINT_FEB9.docx  PRINTMAXX_AUTOMATION_BLUEPRINT_FEB9.js  PRINTMAXX_BRAND_NAMES.xlsx  PRINTMAXX_FREELANCE_ARB.xlsx  PRINTMAXX_INFRA_ASSIGNMENTS.xlsx  PRINTMAXX_INFRA_STACKS.xlsx  PRINTMAXX_MASTER_OPS.xlsx  PRINTMAXX_MASTER_OPS_ENHANCED_2026-02-17.xlsx  PRINTMAXX_MASTER_OPS_ENHANCED_2026-02-18.xlsx  PRINTMAXX_MASTER_OPS_ENHANCED_2026-02-19.xlsx  PRINTMAXX_MASTER_OPS_ENHANCED_2026-02-20.xlsx  PRINTMAXX_MASTER_OPS_ENHANCED_2026-02-21.xlsx  PRINTMAXX_MASTER_OPS_ENHANCED_2026-02-22.xlsx  PRINTMAXX_MASTER_OPS_ENHANCED_2026-02-23.xlsx  PRINTMAXX_MASTER_OPS_ENHANCED_2026-02-24.xlsx  PRINTMAXX_MASTER_OPS_ENHANCED_2026-02-25.xlsx  PRINTMAXX_MASTER_OPS_ENHANCED_2026-02-26.xlsx  PRINTMAXX_MASTER_OPS_ENHANCED_2026-02-27.xlsx  PRINTMAXX_MASTER_OPS_ENHANCED_2026-02-28.xlsx  PRINTMAXX_MASTER_OPS_ENHANCED_2026-03-01.xlsx  PRINTMAXX_MASTER_OPS_ENHANCED_2026-03-02.xlsx  (+32 more)
.claude/: CLAUDE.md  CLAUDE_SLIM.md  external-tools.yaml  launch.json  (+2 more)
OPEN_SOURCE/agent-soul/: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml
OPEN_SOURCE/agent-soul/connectors/: README.md  README.md.backup.1773876480  registry.json  setup.py
OPEN_SOURCE/agent-soul/core/: __init__.py  cognitive_engine.py  conversation_logger.py  decision_engine.py  handoff.py  loop_closer.py  mcp_bridge.py  orchestration.py  pattern_miner.py  procedural_memory.py  resilience.py  self_audit.py  session_briefing.py  user_sim_refiner.py  voice_extractor.py  workflow_bridge.py
OPEN_SOURCE/agent-soul/core/media_providers/: __init__.py  base.py  bland_ai.py  edge_tts_provider.py  openai_media.py  playwright_screenshot.py  replicate_provider.py
OPEN_SOURCE/agent-soul/examples/: example_correction_chains.json  example_meta_rules.md
OPEN_SOURCE/agent-soul/site/: docs.html  index.html  index.html.backup.1773876472  pricing.html
OPEN_SOURCE/agent-soul/templates/: CLAUDE.md  SOUL.md  bias-null.md  voice-config.json
(+20227 files in other folders)
